@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+ * Fixed bug in which JBrowse could not properly display all data in
+   BAM files with reference sequence name sections bigger than 64KB.
+   Thanks to GitHub user lfgu for pointing this out (issue #245).
+
 1.9.1     2013-04-25 12:02:25 EST5EDT
 
  * Significant speed and memory optimizations in BAM data backend
